--- a/src/index.css
+++ b/src/index.css
@@ -24,5 +24,9 @@
 body {
   width: 100%;
   min-height: 100vh;
-  overflow: hidden;
+  overflow: auto;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
