--- a/src/components/LoginForm/loginForm.css
+++ b/src/components/LoginForm/loginForm.css
@@ -57,7 +57,7 @@
   margin-right: 8px;
 }
 
-.email-form-control {
+.form-input-control {
   margin: 0;
   background-image: none;
   color: #1c1d1f;
@@ -72,9 +72,58 @@
   outline: 0 !important;
   height: 60px !important;
   padding: 20px 16px 0;
-  /* opacity: 0.2; */
+  /* opacity: 0; */
   transition: opacity 100ms linear;
   flex: 1;
+}
+
+.input-form-label {
+  color: #1c1d1f;
+  padding: 0;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -0.2px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding-bottom: 8px;
+  width: 100%;
+  min-height: 28px;
+  position: absolute;
+  top: 8px;
+  left: 0;
+  border: 1px solid transparent;
+  pointer-events: none;
+  transition: transform 150ms cubic-bezier(0.2, 0, 0.38, 0.9);
+  transform: translateY(12px);
+  transform-origin: top left;
+  right: 0;
+}
+
+.form-label-content {
+  color: #1c1d1f;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -0.2px;
+  font-size: 14px;
+  pointer-events: none;
+  margin: 0;
+  flex: 1;
+  min-width: 1px;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+}
+
+.form-label-content {
+  transition: all 0.3s ease;
+}
+
+.form-input-control:focus + .input-form-label .form-label-content {
+  transform: translateY(-90%);
+  font-size: 12px;
+  transition: all 0.5s ease;
 }
 
 .login-submit-button {
